--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3'
 
+volumes:
+  jenkins_home:
+
 services:
 
   jenkins:
@@ -8,9 +11,9 @@ services:
     privileged: true
     restart: always
     ports:
-      - 8081:8080
+      - 8082:8080
     volumes:
-      - ./jenkins_home:/var/jenkins_home
+      - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /usr/bin/docker:/usr/bin/docker # which docker
 
@@ -21,4 +24,4 @@ services:
     container_name: registry
     restart: always
     ports:
-      - 5001:5000
+      - 5002:5000
